fix: overlay clipping issues

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -656,7 +656,6 @@
     flex-direction: column;
     flex: 1 1 auto;
     align-content: flex-start;
-    position: relative;
 
     .datagrid-body {
       width: auto;
